<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AuthFragment"
    android:background="@color/black_15">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/screen_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineHeight="36sp"
        app:layout_constraintStart_toEndOf="@id/start_gl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        app:layout_constraintBottom_toTopOf="@id/email_header_tv"
        android:gravity="center_vertical"
        android:textAppearance="@style/regular_white_22"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/registration"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/regular_white_16"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/screen_title_tv"
        app:layout_constraintBottom_toTopOf="@id/email_tl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        android:layout_marginTop="28dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/email_header_tv"
        app:layout_constraintEnd_toStartOf="@id/end_gl"
        app:layout_constraintBottom_toTopOf="@id/password_header_tv"
        app:hintEnabled="false"
        android:layout_marginTop="7dp"
        android:background="@drawable/search_field_bg"
        app:startIconTint="@color/white_F3"
        app:cursorColor="@color/white_F3"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_gmail_com"
            android:textColorHint="@color/white_F3_50alph"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_F3"
            android:textSize="14sp"
            android:lineHeight="20sp"
            android:paddingHorizontal="16dp"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/password_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/regular_white_16"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_tl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintBottom_toTopOf="@id/password_tl"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_tl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/password_header_tv"
        app:layout_constraintEnd_toStartOf="@id/end_gl"
        app:layout_constraintBottom_toTopOf="@id/repeat_password_header_tv"
        app:hintEnabled="false"
        android:layout_marginTop="7dp"
        android:background="@drawable/search_field_bg"
        app:startIconTint="@color/white_F3"
        app:cursorColor="@color/white_F3"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white_F3_50alph"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_F3"
            android:textSize="14sp"
            android:lineHeight="20sp"
            android:paddingHorizontal="16dp"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/repeat_password_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/regular_white_16"
        android:text="@string/repeat_password"
        app:layout_constraintTop_toBottomOf="@id/password_tl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintBottom_toTopOf="@id/repeat_password_tl"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_tl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_header_tv"
        app:layout_constraintEnd_toStartOf="@id/end_gl"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:hintEnabled="false"
        android:layout_marginTop="7dp"
        android:background="@drawable/search_field_bg"
        app:startIconTint="@color/white_F3"
        app:cursorColor="@color/white_F3"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_again"
            android:textColorHint="@color/white_F3_50alph"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white_F3"
            android:textSize="14sp"
            android:lineHeight="20sp"
            android:paddingHorizontal="16dp"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_tl"
        app:layout_constraintStart_toStartOf="@id/start_gl"
        app:layout_constraintEnd_toEndOf="@id/end_gl"
        android:background="@drawable/green_rectangle_bg"
        android:textAppearance="@style/regular_white_14"
        android:text="@string/register"
        android:layout_marginTop="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>